--- a/PT16151MOB_JAVA_2_MOB1023/src/Buoi2_JAVA_Swing/S7_JFrameCheckBox.form
+++ b/PT16151MOB_JAVA_2_MOB1023/src/Buoi2_JAVA_Swing/S7_JFrameCheckBox.form
@@ -23,7 +23,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
+          <Group type="102" attributes="0">
               <EmptySpace pref="72" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="lbl_ThongBao" min="-2" max="-2" attributes="0"/>
