--- a/PT16151MOB_JAVA_2_MOB1023/src/Buoi2_JAVA_Swing/S8_JFrameJoptionPanel.form
+++ b/PT16151MOB_JAVA_2_MOB1023/src/Buoi2_JAVA_Swing/S8_JFrameJoptionPanel.form
@@ -28,12 +28,12 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="btn_check" min="-2" pref="278" max="-2" attributes="0"/>
                   <Group type="102" attributes="0">
-                      <Component id="txt_CheckSo" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
+                      <Component id="txt_CheckSo" min="-2" pref="316" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="lbl_ThongBao" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="263" max="32767" attributes="0"/>
+              <EmptySpace pref="259" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -55,6 +55,9 @@
   <SubComponents>
     <Component class="javax.swing.JButton" name="btn_check">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="cc" red="cc" type="rgb"/>
+        </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="48" style="0"/>
         </Property>
@@ -69,7 +72,6 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="36" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Nh&#x1ead;p s&#x1ed1; nguy&#xea;n"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="lbl_ThongBao">
