--- a/PT16151MOB_JAVA_2_MOB1023/src/Buoi2_JAVA_Swing/S9_JFrameCombobox.form
+++ b/PT16151MOB_JAVA_2_MOB1023/src/Buoi2_JAVA_Swing/S9_JFrameCombobox.form
@@ -26,10 +26,15 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="lbl_ThongBao" min="-2" max="-2" attributes="0"/>
-                  <Component id="cbc_quocgia" min="-2" pref="314" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="cbc_quocgia" min="-2" pref="314" max="-2" attributes="0"/>
+                      <EmptySpace pref="229" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="lbl_ThongBao" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace pref="229" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
