--- a/PT16151_MOB_JAVA2_MOB1023/src/Buoi3_QuanLyGiaoVien/MainGUI.form
+++ b/PT16151_MOB_JAVA2_MOB1023/src/Buoi3_QuanLyGiaoVien/MainGUI.form
@@ -355,8 +355,14 @@
     </Component>
     <Component class="javax.swing.JButton" name="btn_Clear">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="0" red="0" type="rgb"/>
+        </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Tahoma" size="14" style="1"/>
+          <Font name="Tahoma" size="18" style="1"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="ff" red="ff" type="rgb"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Clear"/>
       </Properties>
@@ -365,7 +371,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="230" y="70" width="-1" height="-1"/>
+          <AbsoluteConstraints x="320" y="70" width="160" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
